# lpii-tp1-matrizes-pthreads

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot.py  results.csv  run_scaling.sh
src/: main.c  matmul.c  matmul.h
